# profile

./: .env.example  .gitignore  AGENTS.md  README.md  eslint.config.mjs  next.config.js  package-lock.json  package.json  story-2-1-technology-research.md  tailwind.config.ts  tsconfig.json
docs/: epics.md  (+9 more)
profile-root/: Cargo.toml  DEPENDENCY_MIGRATION_GUIDE.md
profile-root/client/: Cargo.toml  build.rs
profile-root/client/src/: lib.rs  main.rs
profile-root/client/src/connection/: auth.rs  client.rs  message.rs  mod.rs
profile-root/client/src/handlers/: compose.rs  composer.rs  edge_cases.rs  key_generation.rs  key_import.rs  lobby.rs  mod.rs  offline.rs  verify.rs
profile-root/client/src/state/: composer.rs  keys.rs  lobby.rs  messages.rs  mod.rs  session.rs
profile-root/client/src/ui/: chat.rs  colors.rs  composer.rs  composer.slint  composer_tests.rs  connection_status.slint  drill_down_modal.slint  empty_lobby_state.slint  error_display.rs  import_key_screen.slint  key_display.slint  keyboard_shortcuts_help.slint  lobby.rs  lobby_item.slint  lobby_state.rs  main.slint  message_item.slint  mod.rs  (+1 more)
profile-root/client/tests/: clipboard_integration.rs  crypto_keygen_integration.rs  disconnection_integration.rs  key_import_integration.rs  key_memory_safety_integration.rs  keyboard_integration.rs  lobby_display_tests.rs  lobby_integration_tests.rs  lobby_leave_notification_test.rs  lobby_sync_tests.rs  messaging_tests.rs  modal_verification_tests.rs  signature_testing_tests.rs
profile-root/server/: Cargo.toml
profile-root/server/src/: lib.rs  main.rs  rate_limiter.rs
profile-root/server/tests/: auth_integration.rs  integration_multiclient.rs  leave_notification_tests.rs  lobby_integration.rs  lobby_state_isolated.rs  lobby_state_isolated_test.rs  lobby_sync_tests.rs
profile-root/shared/: Cargo.toml
profile-root/shared/src/: config.rs  lib.rs
(+121 files in other folders)
