[workspace]
resolver = "2"
members = ["server", "client", "shared"]

# Shared dependencies across all crates
[workspace.dependencies]
ed25519-dalek = "2.1"
zeroize = { version = "1.6", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
slint = "1.14"
slint-build = "1.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
rand = "0.8"
arboard = "3.4"
tracing = "0.1"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
